--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
       <!--info sec-->
       <section class="info">
-        <img src="/img/black.jpg" alt="black" />
+        <img src="img/black.jpg" alt="black" />
         <div>
           <h2>Your business on the Web</h2>
           <p>
