--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
         <img src="https://source.unsplash.com/random/207x200" alt="" />
         <img src="https://source.unsplash.com/random/208x200" alt="" />
       </section>
+
+      <!-- try smh -->
+      <section class="info-2">
+        <img src="img/blur.jpg" alt="blur" />
+        <div>
+          <h2>Your business on the Web</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            distinctio ratione aliquam dolorum rem iure, tempore nam voluptatem
+            deserunt quisquam voluptate quam incidunt suscipit animi aperiam
+            iusto omnis dolor vitae?
+          </p>
+          <a href="#" class="btn">Learn more</a>
+        </div>
+      </section>
       <!--footer-->
       <footer>
         <p>GridIsGood &copy; 2020</p>
